--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
       <p>Tasks completed in this stage: </p>
         <ul>
           <li>Formed a team of 4</li>
-          <li>Created an online repository</li>
+          <li><a href="https://github.com/isaguimet/CPSC481-TeamT"> Created an online repository </a></li>
           <li>Created a project portfolio</li>
           <li>Came up with 3 Project Ideas</li>
         </ul>
