--- a/stage2.html
+++ b/stage2.html
@@ -43,15 +43,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <div class="w3-main" style="margin-left:250px">
             <div class="w3-row w3-padding-64">
                 <div class="w3-twothird w3-container">
-                    <h1 class="w3-text-teal">Stage 1</h1>
-                    <p>Tasks completed in this stage: </p>
-                    <ul>
-                      <li>Formed a team of 4</li>
-                      <li><a href="TeamContract.pdf">Created and signed team contract</a></li>
-                      <li><a href="https://github.com/isaguimet/CPSC481-TeamT"> Created an online repository </a></li>
-                      <li>Created a project portfolio</li>
-                      <li><a href="Proposed Project Ideas.pdf">Came up with 3 Project Ideas</a></li>
-                    </ul>
+                    <h1 class="w3-text-teal">Stage 2: User Research</h1>
+
                 </div>
             </div>
         </div>
