added link to report

--- a/stage2.html
+++ b/stage2.html
@@ -57,7 +57,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
                       <li>Identified user tasks.</li>
                     </ul>
                     <p>The three research methods we conducted were surveys and questionnaires, competitive product survey and paper prototyping. </p>
-                    <p>Here is a link to our stage 2 report PDF if you want to learn more about our project and research findings.
+                    <a href="CPSC 481 Stage 2 Project Deliverables.pdf">Here is a link to our report.</a>
                 </div>
             </div>
         </div>
