--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <div class="dropdown-content">
           <a href="index.html">Stage 1</a>
           <a href="stage2.html">Stage 2</a>
+          <a href="stage3.html">Stage 3</a>
         </div>
         
       </div>
