--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
       <a href="index.html">Stage 1</a>
       <a href="stage2.html">Stage 2</a>
       <a href="stage3.html">Stage 3</a>
+      <a href="stage4.html">Stage 4</a>
     </div>
     </div>
     <a href="about.html">About</a>
