--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
           <a href="stage2.html">Stage 2</a>
           <a href="stage3.html">Stage 3</a>
           <a href="stage4.html">Stage 4</a>
+          <a href="stage5.html">Stage 5</a>
         </div>
         
       </div>
